style.css
/* 
html5doctor.com Reset Stylesheet
v1.6.1
Last Updated: 2010-09-17
Author: Richard Clark - http://richclarkdesign.com 
Twitter: @rich_clark
*/

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

body {
    line-height:1;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section { 
    display:block;
}

nav ul {
    list-style:none;
}

blockquote, q {
    quotes:none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}

a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}

/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000; 
    font-style:italic;
    font-weight:bold;
}

del {
    text-decoration: line-through;
}

abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;   
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}

input, select {
    vertical-align:middle;
}

/*My styling*/

#map {
	height: 300px;
	width: 300px
}

#main-about .mobile-signup a{
	position: fixed;
	width: 100px;
	height: 40px;
	text-align: center;
	z-index: 2000;
	bottom: 20px;
	left: 0;
	right: 0;
	margin-right: auto;
	margin-left: auto;
	border-radius: 25px;
	line-height: 37px;
	display: none;
	font-family: 'Noto Serif JP', sans-serif;
	font-weight: bold;
	color: black;
	background-image: linear-gradient(to right, #00cc44 , #99ffbb);
}

.main-wrapper {
	margin: 0 auto;
	width: auto;
}

.main-wrapper ul li{
	float: left;
	margin-right; 5px;
}

a {
	text-decoration: none;
}

body {
	background-color: #184193
}



header nav {
	width: 100%;
	height: 60px;
	background-image: linear-gradient(to right, green , white);
	position: fixed;
	box-shadow: 5px 5px 8px black;
	z-index: 1000;
	position: absolute;
}

header nav p {
	float: left;
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;   
}

header nav ul li a {
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;
}

header .nav-login {
	float: right;
}

header .nav-login form {
	float: left;
	padding-top: 15px;
}

header .nav-login form input {
	float: left;
	width: 140px;
	height: 30px;
	padding: 0px 10px;
	margin-right: 10px;
	border: none;
	font-family: arial;
	font-size: 14px;
	color: #111;
	line-height: 30px;
}

header .nav-login form button {
	float: left;
	width: 60px;
	height: 30px;
	margin-right: 10px;
	border: none;
	background-color: #f3f3f3;
	font-family: arial;
	font-size: 14px;
	color: #111;
	cursor: pointer;
}

header .nav-login form button:hover {
	background-color: #ccc;
}

header .nav-login a {
	display: block;
	font-family: arial;
	font-size: 11px;
	color: #111;
	cursor: pointer;
}

#loggedoutmain {
	display: flex;
	margin: 0 auto;
}

.main-container {
	padding-top:70px;
	flex: 1;
}

.main-container-text {
	padding: 100px;
}

.main-container h2 {
	font-size: 17px;
	color: white;
	line-height: 50px;
	text-align: left;
	font-family: 'Noto Serif JP', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

.main-container img {
	width: 100px;
	height: 100px;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.main-container h3 {
	font-size: 22px;
	color: white;
	line-height: 50px;
	text-align: left;
	font-family: 'Montserrat', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

#loginorsignup {
	flex: 1;
	padding-top: 70px;
}

#loginorsignup-text {
	padding: 25px;
}

#loginorsignup p {
	color: white;
}

#headergreeting {
	display: block;
	float: left;
	padding-right: 10px;
	line-height: 63px;
	font-size: 20px;
	font-family: arial;
}

.benefits {
	padding-top: 70px;
}
/* ... */

